--- a/index.html
+++ b/index.html
@@ -297,20 +297,26 @@ echo "options nvidia-drm modeset=1 fbdev=0" >> /etc/modprobe.d/nvidia.conf</pre>
       <button class="copy-btn" onclick="copyCode(this)">Copy</button>
     </div>
     <div class="code-container">
-      <pre>reboot now</pre>
+      <pre>systemctl set-default multi-user.target
+reboot now</pre>
       <button class="copy-btn" onclick="copyCode(this)">Copy</button>
     </div>
-    <p>Download the Linux/Unix NVIDIA driver from the official website.</p>
-    <p>Make it executable (right-click, enable checkbox).</p>
-    <p>In the terminal:</p>
     <div class="code-container">
-      <pre>cd ~/Downloads
-sudo ./NVIDIA-Linux-x86_64-xxx.x.xx.run</pre>
+      <pre>sudo su</pre>
+      <button class="copy-btn" onclick="copyCode(this)">Copy</button>
+    </div>
+    <p>Download the Linux/Unix NVIDIA driver from the official website.
+    Make it executable (right-click, enable checkbox).</p>
+    <div class="code-container">
+      <pre>export CC="gcc -std=gnu17"
+cd Downloads/
+./NVIDIA-Linux-x86_64-xxx.x.xx.run</pre>
       <button class="copy-btn" onclick="copyCode(this)">Copy</button>
     </div>
     <p>Click "Continue" and "Yes" for DKMS installations.</p>
     <div class="code-container">
-      <pre>sudo reboot now</pre>
+      <pre>systemctl set-default graphical.target
+sudo reboot now</pre>
       <button class="copy-btn" onclick="copyCode(this)">Copy</button>
     </div>
 
