--- a/index.html
+++ b/index.html
@@ -251,6 +251,10 @@ sudo systemctl enable --now bluetooth ufw
 sudo ufw default deny</pre>
       <button class="copy-btn" onclick="copyCode(this)">Copy</button>
     </div>
+    <div class="code-container">
+      <pre>sudo dnf group install multimedia</pre>
+      <button class="copy-btn" onclick="copyCode(this)">Copy</button>
+    </div>
 
     <h3>Make Download Faster</h3>
     <div class="code-container">
